Fix - Overflow with 2 column carousel on smaller screens

--- a/web/themes/custom/hm-public-theme/static/sass/shared/_slides.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/shared/_slides.scss
@@ -48,7 +48,7 @@
   .hero-slide--image,
   .two-column-slide,
   .two-column-slide--image {
-    height: 450px;
+    height: 100%;
     min-height: 225px;
   }
 
